# pouch

./: .editorconfig  .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-MIT  README.md  SECURITY.md  deny.toml  release-plz.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/rust-setup/: action.yml
.github/workflows/: feature-powerset.yml  labeler.yml  msrv.yml  no-std.yml  pr-title.yml  release-plz.yml  rust.yml  security-audit.yml  semver.yml
benches/: backend.rs  bag.rs  common.rs  map.rs  population.rs  set.rs  soa.rs
size/: Cargo.toml  README.md  measure.sh
size/src/: lib.rs
src/: bag.rs  column_map.rs  error.rs  lib.rs  map.rs  serde_impls.rs  set.rs  sorted_column_map.rs  store.rs
src/column_map/: entry.rs
src/map/: entry.rs
src/set/: algebra.rs
src/store/: backend.rs  capped.rs  scratch.rs  spill.rs
src/store/backend/: arrayvec.rs  heapless.rs  slice.rs  smallvec.rs  tinyvec.rs  vec.rs
tests/: properties.rs  smoke.rs
